<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPS Pal</string>
    <string name="action_settings">Settings</string>
    <string name="etLong">Lon: </string>
    <string name="etLatitude">Lat: </string>
    <string name="tvSpeed" >0</string>
    <string name="tvBearing">(0°)</string>
    <string name="pref_units">Speed units</string>
    <string name="pref_screen_rotation">Screen rotation</string>
    <string name="pref_screen_active">Keep screen on</string>
    <string name="pref_screen_colormode">Day/Night colors</string>
    <string name="action_about">About</string>
    <string name="GPS_available">GPS available</string>
    <string name="GPS_not_available">GPS not available</string>
    <string name="phone_number">Phone number</string>
    <string name="message">Message</string>
    <string name="btnSend">Send</string>
    <string name="btnCancel">Back</string>
    <string name="action_send_sms">Send SMS</string>
    <string name="title_activity_sendsms">Send SMS</string>
    <string name="title_activity_settings">Settings</string>
    <string name="not_valid_phonenumber">Phone number not valid</string>
    <string name="no_sms_capability">No SMS capability on this device</string>
    <string name="screen_size">Default screen size</string>
    <string name="not_found_position_yet">Not found position yet</string>

</resources>
