<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="pref_speed_unit"
        android:title="@string/pref_units"
        android:entries="@array/units_options"
        android:entryValues="@array/units_values"
        android:defaultValue="1" />

    <ListPreference
        android:key="pref_screen_rotation"
        android:title="@string/pref_screen_rotation"
        android:entries="@array/screen_rotation_options"
        android:entryValues="@array/screen_rotation_values"
        android:defaultValue="1" />

    <CheckBoxPreference
        android:key="pref_screen_active"
        android:title="@string/pref_screen_active"
        android:defaultValue="true" />

    <ListPreference
        android:key="pref_screen_colormode"
        android:title="@string/pref_screen_colormode"
        android:entries="@array/colormode_options"
        android:entryValues="@array/colormode_values"
        android:defaultValue="1" />

</PreferenceScreen>