<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:id="@+id/tvPhoneNumber"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/etPhoneNumber"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/tvPhoneNumber"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:id="@+id/tvMessage"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etPhoneNumber" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etMessageBody"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/tvMessage"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:hint="Message" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSend"
        android:id="@+id/btnSend"
        android:layout_gravity="end"
        android:layout_below="@+id/etMessageBody"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCancel"
        android:id="@+id/btnCancel"
        android:layout_gravity="end"
        android:layout_alignTop="@+id/btnSend"
        android:layout_toLeftOf="@+id/btnSend"
        android:layout_toStartOf="@+id/btnSend" />

</RelativeLayout>